--- a/simple_api/Dockerfile
+++ b/simple_api/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:2.7-buster
-LABEL maintainer="ulrich monji" entreprise="eazytraining"
+LABEL maintainer="azdinekirasse Zizien" email="azdinekirasse1@gmail.com"
 COPY ./student_age.py /
 RUN apt update -y &&  apt install python-dev python3-dev libsasl2-dev python-dev libldap2-dev libssl-dev -y 
 RUN pip install flask==1.1.2 flask_httpauth==4.1.0 flask_simpleldap python-dotenv==0.14.0
